# symbolic-algebra-agentic-collab

./: .agent-reviewer-policy.json  .fourmolu.yaml  .gitignore  .hlint.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  plan.md  rules.md  symbolic-algebra-agentic-collab.cabal
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.yml
.github/workflows/: agent-loop.yml  ci.yml  policy-daily.yml  trusted-agent-review.yml  trusted-review-dispatch.yml
app/: Main.hs
artifacts/policy-proposals/: 2026-02-23.json  2026-02-23.md  2026-02-24.json  2026-02-24.md  2026-02-25.json  2026-02-25.md  2026-02-26.json  2026-02-26.md  2026-02-27.json  2026-02-27.md  2026-02-28.json  2026-02-28.md  2026-03-01.json  2026-03-01.md  2026-03-02.json  2026-03-02.md  2026-03-03.json  2026-03-03.md  2026-03-04.json  2026-03-04.md  2026-03-05.json  2026-03-05.md  2026-03-06.json  2026-03-06.md  2026-03-07.json  2026-03-07.md  2026-03-08.json  2026-03-08.md  2026-03-09.json  2026-03-09.md  2026-03-10.json  2026-03-10.md  2026-03-11.json  2026-03-11.md  2026-03-12.json  2026-03-12.md  2026-03-13.json  2026-03-13.md  2026-03-14.json  2026-03-14.md  (+2 more)
artifacts/policy-signals/: 2026-02-23.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-06.json  2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  2026-03-12.json  2026-03-13.json  2026-03-14.json  2026-03-15.json
artifacts/tdd/policy-tdd-phase-gate/: FEATURE.md  IMPL.json
artifacts/tdd/symbolic-dsl-scaffold/: FEATURE.md  IMPL.json  TESTS.json  TYPES.json
artifacts/tdd/symbolic-egraph-foundation/: FEATURE.md  IMPL.json  TESTS.json  TYPES.json
artifacts/tdd/symbolic-egraph-io/: FEATURE.md  IMPL.json  TESTS.json  TYPES.json
artifacts/tdd/symbolic-egraph-saturation/: FEATURE.md  IMPL.json  TESTS.json  TYPES.json
artifacts/tdd/symbolic-egraph-strategy/: FEATURE.md  IMPL.json  TESTS.json  TYPES.json
artifacts/tdd/symbolic-impl-strategy/: FEATURE.md  TYPES.json
artifacts/tdd/symbolic-plan-closeout/: FEATURE.md  TYPES.json
bench/: Main.hs
bench/baseline/: workflow-benchmarks.json
docs/: index.md
docs/architecture/: layers.md
docs/domains/: agentic-loop.md  logging.md  safety.md  symbolic-implementation-strategy.md  tdd-phases.md  testing.md
docs/modules/: Symbolic.Corpus.md  Symbolic.Dsl.Ast.md  Symbolic.Dsl.Parser.md  Symbolic.Dsl.Pretty.md  Symbolic.Engine.Apply.md  Symbolic.Engine.EGraph.Build.md  Symbolic.Engine.EGraph.Extract.md  Symbolic.Engine.EGraph.Rewrite.md  Symbolic.Engine.EGraph.Saturate.md  Symbolic.Engine.EGraph.Translate.md  Symbolic.Engine.Search.md  Symbolic.Implementation.Plan.md  Symbolic.Pattern.md  Symbolic.Rule.md  Symbolic.Strategy.md  Symbolic.Symbol.md  Symbolic.Term.md  Symbolic.Trace.md  scripts.check-property-tests.md  scripts.check-tdd-phase.md  scripts.check-test-layout.md
docs/policy/: changelog.md  rules-catalog.md
docs/quality/: scorecard.md
schemas/: agent-task.schema.json  decision-packet.schema.json  policy-change-proposal.schema.json  policy-signal.schema.json  review-artifact.schema.json  tdd-phase.schema.json
scripts/: format-check.sh  format.sh  lint.sh
scripts/agent/: aggregate-reviews.py  check-cli-health.sh  run-review.py  validate-reviewer-policy.py
scripts/bench/: check-cost-sanity.py  check-regressions.py  run-benchmarks.sh
scripts/policy/: check-all.sh  check-bench-regressions.sh  check-dead-rules.sh  check-doc-index.sh  check-no-partials.sh  check-no-string.sh  check-policy-coverage.sh  check-property-tests.sh  check-protocol-tags.sh  check-required-files.sh  check-reviewer-policy.sh  check-rule-freshness.sh  check-schemas.sh  check-tdd-phase.sh  check-test-layout.sh  generate-daily-policy-proposal.py  test-check-tdd-phase-fixtures.sh  validate-policy-artifact.py
src/: SymbolicAlgebraAgenticCollab.hs
src/SymbolicAlgebraAgenticCollab/: Config.hs  Logging.hs  Workflow.hs
src/SymbolicAlgebraAgenticCollab/Symbolic/: Corpus.hs  Pattern.hs  Rule.hs  Strategy.hs  Symbol.hs  Term.hs  Trace.hs
src/SymbolicAlgebraAgenticCollab/Symbolic/Dsl/: Ast.hs  Parser.hs  Pretty.hs
src/SymbolicAlgebraAgenticCollab/Symbolic/Engine/: Apply.hs  Search.hs
src/SymbolicAlgebraAgenticCollab/Symbolic/Engine/EGraph/: Build.hs  Extract.hs  Rewrite.hs  Saturate.hs  Translate.hs
test/: Main.hs  Spec.hs
test/Integration/Symbolic/: ContractsIntegrationTest.hs  PipelineIntegrationTest.hs
test/Integration/Workflow/: ReviewLoopIntegrationTest.hs
test/Support/: WorkflowHarness.hs
test/Support/Generators/Symbolic/: Core.hs
test/Unit/: SymbolicAlgebraAgenticCollabTest.hs
test/Unit/SymbolicAlgebraAgenticCollab/: ConfigTest.hs  LoggingTest.hs  WorkflowTest.hs
test/Unit/SymbolicAlgebraAgenticCollab/Symbolic/: CorpusTest.hs  PatternTest.hs  RuleTest.hs  StrategyTest.hs  SymbolTest.hs  TermTest.hs  TraceTest.hs
test/Unit/SymbolicAlgebraAgenticCollab/Symbolic/Dsl/: AstTest.hs  ParserTest.hs  PrettyTest.hs
test/Unit/SymbolicAlgebraAgenticCollab/Symbolic/Engine/: ApplyTest.hs  SearchTest.hs
test/Unit/SymbolicAlgebraAgenticCollab/Symbolic/Engine/EGraph/: BuildTest.hs  ExtractTest.hs  RewriteTest.hs  SaturateTest.hs  TranslateTest.hs
