cabal-version: 3.0
name: symbolic-algebra-agentic-collab
version: 0.1.0.0
synopsis: Agentic collaboration scaffold for symbolic algebra in Haskell
description:
  Project scaffold for a type/test-driven symbolic algebra system with
  multi-agent development workflows and CI-enforced policy checks.
license: MIT
license-file: LICENSE
author: Jaroslav Scheinpflug
maintainer: jscheinpflug@g.harvard.edu
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md
  rules.md
  plan.md

common warnings
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-patterns
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wpartial-fields
    -Wredundant-constraints

library
  import: warnings
  exposed-modules:
    SymbolicAlgebraAgenticCollab
    SymbolicAlgebraAgenticCollab.Config
    SymbolicAlgebraAgenticCollab.Logging
    SymbolicAlgebraAgenticCollab.Symbolic.Corpus
    SymbolicAlgebraAgenticCollab.Symbolic.Dsl.Ast
    SymbolicAlgebraAgenticCollab.Symbolic.Dsl.Parser
    SymbolicAlgebraAgenticCollab.Symbolic.Dsl.Pretty
    SymbolicAlgebraAgenticCollab.Symbolic.Engine.Apply
    SymbolicAlgebraAgenticCollab.Symbolic.Engine.EGraph.Build
    SymbolicAlgebraAgenticCollab.Symbolic.Engine.EGraph.Translate
    SymbolicAlgebraAgenticCollab.Symbolic.Engine.Search
    SymbolicAlgebraAgenticCollab.Symbolic.Pattern
    SymbolicAlgebraAgenticCollab.Symbolic.Rule
    SymbolicAlgebraAgenticCollab.Symbolic.Strategy
    SymbolicAlgebraAgenticCollab.Symbolic.Symbol
    SymbolicAlgebraAgenticCollab.Symbolic.Term
    SymbolicAlgebraAgenticCollab.Symbolic.Trace
    SymbolicAlgebraAgenticCollab.Workflow
  build-depends:
    base >=4.18 && <5,
    containers >=0.6 && <0.9,
    text >=2.0 && <2.2,
    hslogger >=1.3 && <1.4
  hs-source-dirs: src
  default-language: GHC2021

executable symbolic-algebra-agentic-collab
  import: warnings
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    text >=2.0 && <2.2,
    symbolic-algebra-agentic-collab
  hs-source-dirs: app
  default-language: GHC2021

test-suite symbolic-algebra-agentic-collab-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Integration.Symbolic.ContractsIntegrationTest
    Integration.Workflow.ReviewLoopIntegrationTest
    Support.Generators.Symbolic.Core
    Support.WorkflowHarness
    Unit.SymbolicAlgebraAgenticCollab.ConfigTest
    Unit.SymbolicAlgebraAgenticCollab.LoggingTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.CorpusTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.Dsl.AstTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.Dsl.ParserTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.Dsl.PrettyTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.Engine.ApplyTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.Engine.SearchTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.PatternTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.RuleTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.StrategyTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.SymbolTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.TermTest
    Unit.SymbolicAlgebraAgenticCollab.Symbolic.TraceTest
    Unit.SymbolicAlgebraAgenticCollab.WorkflowTest
    Unit.SymbolicAlgebraAgenticCollabTest
  build-depends:
    base >=4.18 && <5,
    containers >=0.6 && <0.9,
    QuickCheck >=2.14 && <2.16,
    hspec >=2.11 && <2.12,
    text >=2.0 && <2.2,
    symbolic-algebra-agentic-collab
  hs-source-dirs: test
  default-language: GHC2021

benchmark workflow-bench
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    text >=2.0 && <2.2,
    criterion >=1.6 && <1.7,
    symbolic-algebra-agentic-collab
  hs-source-dirs: bench
  default-language: GHC2021
